--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav {
 a {
   padding: 0 20px;
   margin: 0;
+  color: #ffffff;
 }
 
 section{
@@ -64,6 +65,13 @@ li{
   color: #fff;
 }
 
+.icon{
+  height: 40px; 
+  width: 40px; 
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
 section .row img {
   margin: 0 0 30px;
   width: 100%;
@@ -100,14 +108,7 @@ section .row img {
   border-left: #D7D6D6  5px solid;*/
 }
 
-.portrait_main {
-  width:  60%;
-  height: 60%;
-/*  border-top: #D7D6D6  5px solid;
-  border-right: #D7D6D6  5px solid;
-  border-bottom: #D7D6D6  5px solid;
-  border-left: #D7D6D6  5px solid;*/
-}
+
 
 .explain{
   position: relative;
@@ -158,14 +159,6 @@ section .row img {
   display: none;
 }
 
-figure img {
-  width: 100%;
-  height: auto;
-}
-
-figure {
-  margin-bottom: 30px;
-}
 
 footer {
   font-size: 12px;
@@ -198,7 +191,7 @@ footer ul {
 }
 
 .header h1 {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   /*margin-bottom: 0.3rem;*/
   color: #fff;
   font-size: 80px; 
@@ -207,6 +200,7 @@ footer ul {
 .header .p-large {
   /*margin-bottom: 2rem;*/
   color: #dfe5ec;
+  text-align: center;
 }
 
 .counter {
