--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li{
   text-align:justify;
 }
 
-.jumbotron {
+/*.jumbotron {
   display: flex;
   align-items: center;
   background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/La_ronda_de_noche%2C_por_Rembrandt_van_Rijn.jpg/1259px-La_ronda_de_noche%2C_por_Rembrandt_van_Rijn.jpg');
@@ -64,14 +64,7 @@ li{
 .jumbotron h3 {
   margin: 0 0 20px;
   color: #fff;
-}
-
-.icon{
-  height: 40px; 
-  width: 40px; 
-  margin-top: 10px;
-  margin-right: 20px;
-}
+}*/
 
 section .row img {
   margin: 0 0 30px;
@@ -101,12 +94,16 @@ section .row img {
 }
 
 .portrait {
-  width:  100%;
-  height: 100%;
+/*  width:  100%;
+  height: 100%;*/
 /*  border-top: #D7D6D6  5px solid;
   border-right: #D7D6D6  5px solid;
   border-bottom: #D7D6D6  5px solid;
   border-left: #D7D6D6  5px solid;*/
+max-width: 100%;max-height: 100%; width: auto; height: auto;
+padding: 10% 0;
+
+
 }
 
 
@@ -126,13 +123,13 @@ padding: 20% 0;
 
 .imgcard{
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 0.4s;
 
 }
 
 
 .imgcard:hover{
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .arrow{
