--- a/style.css
+++ b/style.css
@@ -42,29 +42,6 @@ li{
   text-align:justify;
 }
 
-/*.jumbotron {
-  display: flex;
-  align-items: center;
-  background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/La_ronda_de_noche%2C_por_Rembrandt_van_Rijn.jpg/1259px-La_ronda_de_noche%2C_por_Rembrandt_van_Rijn.jpg');
-  background-size: cover;
-  color: #ffffff;
-  height: 100%;
-  padding-top: 8rem;
-  padding-bottom: 2.125rem;
-  text-align: center;
-}
-
-.jumbotron h2 {
-  font-size: 60px;
-  font-weight: 700;
-  margin: 0;
-  color: #fff;
-}
-
-.jumbotron h3 {
-  margin: 0 0 20px;
-  color: #fff;
-}*/
 
 section .row img {
   margin: 0 0 30px;
@@ -94,15 +71,11 @@ section .row img {
 }
 
 .portrait {
-/*  width:  100%;
-  height: 100%;*/
-/*  border-top: #D7D6D6  5px solid;
-  border-right: #D7D6D6  5px solid;
-  border-bottom: #D7D6D6  5px solid;
-  border-left: #D7D6D6  5px solid;*/
-max-width: 100%;max-height: 100%; width: auto; height: auto;
+max-width: 100%;
+max-height: 100%; 
+width: auto; 
+height: auto;
 padding: 10% 0;
-
 
 }
 
